--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -168,6 +168,16 @@
   "infinity.components.ProgramToggle.task": "用事",
   "infinity.components.ProgramToggle.bug": "バグ",
   "infinity.components.ProgramToggle.data": "データ",
+  "infinity.components.ProgramToggle.goalTooltip":
+    "ターゲットを決定する。 国連総会のメンバーとしてあなたについて考えてみてください。 これらの目標は重要ですか？",
+  "infinity.components.ProgramToggle.ideaTooltip":
+    "革新を判断する。あなたが発明家であると考えてください。 この方法は革新的ですか？ この方法は意味がありますか？",
+  "infinity.components.ProgramToggle.planTooltip":
+    "実現する。あなたをCEOと考えてください。 実行可能なビジネスに計画を変更するには？",
+  "infinity.components.ProgramToggle.stepTooltip":
+    "プロジェクトマネージャーとしてあなたについて考えてみてください。 このプロジェクトセグメンテーションは、人々が自分の仕事を整理するのを容易にしますか？",
+  "infinity.components.ProgramToggle.taskTooltip":
+    "エンジニアとしてあなたについて考えてみてください。 この機能を実装する正しい方法は何ですか？",
   "infinity.components.SignInLine.signIn": "ログイン",
   "infinity.components.TabDataField.dataField": "データフィールド",
   "infinity.components.TabDataField.putData": "あなたのデータをここに入れる",
