--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -171,7 +171,7 @@
   "infinity.components.ProgramToggle.goalTooltip":
     "Судить цели. Подумайте, как вы являетесь членом Ассамблеи Объединенных Наций. Важны ли эти цели?",
   "infinity.components.ProgramToggle.ideaTooltip":
-    "Судья новизны. Подумайте, как вы, полуботник. Это новое? Имеет ли смысл смысл?",
+    "Судья новизны. Подумайте, как вы, изобретатель. Это новое? Имеет ли смысл смысл?",
   "infinity.components.ProgramToggle.planTooltip":
     "Реализовать проект. Подумайте, как вы генеральный директор. Как превратить его в жизнеспособный бизнес?",
   "infinity.components.ProgramToggle.stepTooltip":
