--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -10,5 +10,5 @@
     "Zeige Kommentare in allen Sprachen ({commentsCount})",
   "infinity.scenes.Topic.showCommentsInCurrentLanguage":
     "Zeige Kommentare auf Deutsch",
-  "infinity.scenes.Topic.languages": "Sprachen"
+  "infinity.scenes.Topic.languages": "Sprachen: "
 }
