--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -154,6 +154,15 @@
   "infinity.components.ProgramToggle.programs": "Code",
   "infinity.components.ProgramToggle.importingToolip":
     "Importing programs will be released coming soon...",
+  "infinity.components.ProgramToggle.all": "All",
+  "infinity.components.ProgramToggle.need": "Needs",
+  "infinity.components.ProgramToggle.goal": "Goals",
+  "infinity.components.ProgramToggle.idea": "Ideas",
+  "infinity.components.ProgramToggle.plan": "Plans",
+  "infinity.components.ProgramToggle.step": "Steps",
+  "infinity.components.ProgramToggle.task": "Tasks",
+  "infinity.components.ProgramToggle.develop": "Develop",
+  "infinity.components.ProgramToggle.data": "Get Data",
   "infinity.components.SignInLine.signIn": "Sign In",
   "infinity.components.TabDataField.dataField": "Data Field",
   "infinity.components.TabDataField.putData": "Put your data here",
