--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,7 +1,7 @@
 {
-  "infinity.components.Header.title": "Infinity",
+  "infinity.components.Header.title": "INFINITY",
   "infinity.components.Header.subtitle":
-    "Open chats and projects to realise global goals",
+    "Open Platform to Realize Global Goals.",
   "infinity.scenes.Home.Menu.title": "Home",
   "infinity.scenes.Home.TopicList.noTopics":
     "No topics. Try to change filter parameters.",
