--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -1,7 +1,7 @@
 {
-  "infinity.components.Header.title": "無限の家族",
+  "infinity.components.Header.title": "インフィニティ",
   "infinity.components.Header.subtitle":
-    "グローバルな目的を実現するオープンプロジェクト",
+    "グローバルな目的を実現するオープンプラットフォーム。",
   "infinity.scenes.Home.Menu.title": "ホーム",
   "infinity.scenes.Home.TopicList.noTopics":
     "トピックはありません。 フィルターパラメーターを変更してみてください。",
