--- a/src/translations/lt.json
+++ b/src/translations/lt.json
@@ -1,7 +1,7 @@
 {
-  "infinity.components.Header.title": "Begalybės šeima",
+  "infinity.components.Header.title": "INFINITI",
   "infinity.components.Header.subtitle":
-    "Atviri pokalbiai ir projektai globaliems tikslams",
+    "Atvira platforma globaliems tikslams siekti.",
   "infinity.scenes.Home.Menu.title": "Pradžia",
   "infinity.scenes.Home.TopicList.noTopics":
     "Temų nerasta. Pabandykite pakeisti filtrų parametrus.",
