--- a/src/translations/ru.json
+++ b/src/translations/ru.json
@@ -1,7 +1,7 @@
 {
-  "infinity.components.Header.title": "Семья Инфинити",
+  "infinity.components.Header.title": "ИНФИНИТИ",
   "infinity.components.Header.subtitle":
-    "Открытые проекты для реализации глобальных целей",
+    "Открытые платформа для реализации глобальных целей.",
   "infinity.scenes.Home.Menu.title": "Главная",
   "infinity.scenes.Home.TopicList.noTopics":
     "Нет постов. Пропробуйте изменить фильтр.",
