update Chinese, Japanese translations

--- a/src/translations/ja.json
+++ b/src/translations/ja.json
@@ -1,5 +1,5 @@
 {
-  "infinity.components.Header.title": "インフィニティ",
+  "infinity.components.Header.title": "無限",
   "infinity.components.Header.subtitle":
     "グローバルな目的を実現するオープンプラットフォーム。",
   "infinity.scenes.Home.Menu.title": "ホーム",
