styles for menu switcher, some translations

--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -12,5 +12,6 @@
     "Zeige Kommentare auf Deutsch",
   "infinity.scenes.Topic.languages": "Sprachen: ",
   "infinity.components.Header.subtitle":
-    "Offene Plattform für Verwirklichung globaler Ziele."
+    "Offene Plattform für Verwirklichung globaler Ziele.",
+  "infinity.components.Menu.new": "Neues"
 }
